# binder

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  Dockerfile  README.md  build-and-run-tests.py  build.py  pyproject.toml  setup.py  sphinx-doc-generator.py
.github/: dependabot.yml
.github/workflows/: executable.yml  main.yml  mainnight.yml  wheels.yml
.github/workflows/centos7/: Dockerfile  action.yaml  entrypoint.sh
.github/workflows/centos7night/: entrypoint.sh
.github/workflows/centos8/: Dockerfile  entrypoint.sh
.github/workflows/fedora26/: Dockerfile
.github/workflows/fedora27/: Dockerfile
.github/workflows/fedora28/: Dockerfile  action.yaml
.github/workflows/fedora29/: Dockerfile  entrypoint.sh
.github/workflows/fedora30/: Dockerfile
.github/workflows/fedora31/: Dockerfile  entrypoint.sh
.github/workflows/fedora32/: Dockerfile  entrypoint.sh
.github/workflows/fedora33/: Dockerfile  entrypoint.sh
.github/workflows/fedora34/: Dockerfile
.github/workflows/fedora35/: Dockerfile
.github/workflows/osx/: entrypoint.sh
.github/workflows/ubuntu18/: Dockerfile  entrypoint.sh
.github/workflows/ubuntu19/: Dockerfile  entrypoint.sh
.github/workflows/ubuntu20/: Dockerfile  entrypoint.sh
binder/: __init__.py  binder.cpp  binder.hpp  class.cpp  config.cpp  config.hpp  context.cpp  enum.cpp  enum.hpp  function.cpp  function.hpp  stl_binders.hpp  type.cpp  type.hpp  util.cpp
cmake/: binderConfig.cmake.in
cmake/Modules/FindPython/: Support.cmake
debian/: binder-dev.install  changelog  control  copyright  rules
documentation/: Makefile  about.rst  basics.rst  conf.py  config.rst  debugging.rst  examples.rst  index.rst  install.rst  limitations.rst  requirements.txt  testing.rst
examples/: Dockerfile
examples/example_py_struct/: all_bash_includes.hpp  all_cmake_includes.hpp  config.cfg  make_bindings_via_cmake.py
examples/example_py_struct/bash_bindings/: test_struct.modules  test_struct.sources
examples/example_py_struct/cmake_bindings/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  rules.ninja
examples/example_py_struct/cmake_bindings/test_struct/: test_struct.cpp
examples/example_struct/: README.md  all_cmake_includes.hpp  config.cfg  make_bindings_via_bash.sh  make_bindings_via_cmake.py  reference_all_includes.hpp
examples/example_struct/cmake_bindings/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  rules.ninja  test_struct.cpp  test_struct.modules  test_struct.sources
examples/example_struct/cmake_bindings/test_struct/: test_struct.cpp  test_struct_1.cpp
examples/example_struct/include/: myts.hpp
examples/example_templates_project/: Makefile  make_bindings_via_cmake.py
examples/example_templates_project/src/: main.cpp  template_lib_h.hpp  template_lib_impl.hpp
examples/mmtf_example/: all_cmake_includes.hpp  config.cfg  make_bindings_via_bash_and_stl.sh  make_bindings_via_cmake.py
examples/mmtf_example/cmake_bindings/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  benchmark.py  build.ninja  cmake_install.cmake  mmtf_cpp.cpp  mmtf_cpp.modules  mmtf_cpp.sources  rules.ninja
examples/mmtf_example/cmake_bindings/msgpack/: object.cpp
examples/mmtf_example/cmake_bindings/msgpack/v1/: object_fwd.cpp
examples/mmtf_example/cmake_bindings/msgpack/v1/detail/: cpp11_zone.cpp
examples/mmtf_example/cmake_bindings/msgpack/v2/: object_fwd.cpp
examples/mmtf_example/cmake_bindings/std/: basic_ios_tcc.cpp  exception.cpp  fstream_tcc.cpp  fstream_tcc_1.cpp  ios_base.cpp  istream_tcc.cpp  locale_classes.cpp  ostream_tcc.cpp  sstream_tcc.cpp  stl_map.cpp  stl_vector.cpp  stl_vector_1.cpp  stl_vector_2.cpp  stl_vector_3.cpp  stl_vector_4.cpp  stl_vector_5.cpp  system_error.cpp
examples/mmtf_example/cmake_bindings/unknown/: unknown.cpp  unknown_1.cpp  unknown_10.cpp  unknown_11.cpp  unknown_12.cpp  unknown_2.cpp  unknown_3.cpp  unknown_4.cpp  unknown_5.cpp  unknown_6.cpp  unknown_7.cpp  unknown_8.cpp  unknown_9.cpp
examples/mmtf_example/include/mmtf/: map_decoder.hpp  (+5 more)
examples/mmtf_example/include_original/: instantiate.hpp  mmtf.hpp
examples/mmtf_example/msgpack-c/: msgpack_vc8.sln  msgpack_vc8.vcproj
examples/mmtf_example/msgpack_include/: msgpack.h  msgpack.hpp
examples/mmtf_example_scratch/: all_cmake_includes.hpp  bind_mmtf_cpp.py  config.cfg  custom_zone_type_binding.hpp
examples/mmtf_example_scratch/cmake_bindings/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  mmtf_cpp.cpp  rules.ninja  test.mmtf
new_features/buffer_protocol/: CMakeLists.txt  addon_Matrix.hpp  binding.cfg  buffer_protocol.hpp  buffer_protocol.py  includes.hpp
python/: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
python/binder/: __init__.py  __main__.py
python/tests/: test_binder.py
source/: CMakeLists.txt  binder.cpp  binder.hpp  class.cpp  class.hpp  config.cpp  config.hpp  const.cpp  const.hpp  context.cpp  context.hpp  dependency.hpp  enum.cpp  enum.hpp  function.cpp  function.hpp  main.cpp  options.cpp  options.hpp  stl_binders.hpp  type.cpp  type.hpp  util.cpp  util.hpp
source/fmt/: os.h
test/: CMakeLists.txt  T00.basic.hpp  T00.basic.ref  T00.basic.ref.cpp  T01.enum.config  T01.enum.hpp  T01.enum.ref  T01.enum.ref.cpp  T02.function.hpp  T02.function.ref  T02.function.ref.cpp  T05.default.hpp  T05.default.ref  T05.default.ref.cpp  T07.class.hpp  T07.class.match_args.hpp  T07.class.match_args.ref  T07.class.match_args.ref.cpp  T07.class.ref  T07.class.ref.cpp  T07.class_with_const_members.hpp  T07.class_with_const_members.ref.cpp  T08.constructor.hpp  T08.constructor.ref  T08.constructor.ref.cpp  T09.overload.hpp  T09.overload.ref  T09.overload.ref.cpp  T10.inheritance.hpp  T10.inheritance.ref  T10.inheritance.ref.cpp  T10.virtual_inheritance.hpp  T10.virtual_inheritance.ref.cpp  T11.override.hpp  T11.override.ref  T11.override.ref.cpp  T12.insertion_operator.hpp  T12.insertion_operator.ref  T12.insertion_operator.ref.cpp  T12.operator.hpp  (+138 more)
(+247 files in other folders)
